Dynamixel/log/build_2026-05-17_17-10-39/dynamixel_control/stderr.log
/home/minwoong/OneDrive/JMW/dynamixel_8DOF/Dynamixel/dynamixel_control/src/poppy_read_write_node.cpp: In member function ‘void PoppyController::timerCallback()’:
/home/minwoong/OneDrive/JMW/dynamixel_8DOF/Dynamixel/dynamixel_control/src/poppy_read_write_node.cpp:343:86: error: ‘start_time’ was not declared in this scope; did you mean ‘strptime’?
  343 |     auto duration = std::chrono::duration_cast<std::chrono::microseconds>(end_time - start_time).count();
      |                                                                                      ^~~~~~~~~~
      |                                                                                      strptime
gmake[2]: *** [CMakeFiles/poppy_read_write_node.dir/build.make:76: CMakeFiles/poppy_read_write_node.dir/src/poppy_read_write_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:179: CMakeFiles/poppy_read_write_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
